--- a/src/main/resources/templates/delete_user.html
+++ b/src/main/resources/templates/delete_user.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html html lang="cs" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org"
-      xmlns:sec="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml" xmlns:style="http://www.w3.org/1999/xhtml"
+      xmlns:text-align="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Delete user</title>
-
+    <!--	<link rel="stylesheet" href="css/style.css" />-->
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous"/>
-    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"-->
-    <!--          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
     <style>
         .b-green, .b-green:before {
             color: white;
@@ -26,39 +22,67 @@
             background: linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#1abc9c', GradientType=1 );
         }
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        div.ex1 {
+            width: 900px;
+            height: 900px;
+            margin: auto;
+            border: white;
+        }
+        h1 {
+            text-align: center;
+
+        }
     </style>
 </head>
 <body>
 
 <!-- create navigation bar ( header) -->
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed"
-                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span> <span
-                    class="icon-bar"></span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">Home Page
-            </a>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed"
+                        data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                        aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span> <span
+                        class="icon-bar"></span> <span class="icon-bar"></span> <span
+                        class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
+                <a class="navbar-brand" href="#" th:href="@{/products}">Shop</a>
+                <a class="navbar-brand" href="#" th:href="@{/login}">Login</a>
+                <a class="navbar-brand" href="#" th:href="@{/shoppingcart}">Shopping cart</a>
+                <a class="navbar-brand" href="#" th:href="@{/transfermoney}">Transfer money</a>
+                <a class="navbar-brand" href="#" th:href="@{/getinfo}">Get info</a>
+                <a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
+                <a class="navbar-brand" href="#" th:href="@{/deleteuser}">Delete user</a>
+                <a class="navbar-brand" href="#" th:href="@{/logout}">Log out</a>
+            </div>
         </div>
+       </nav>
+      </div>
     </div>
-</nav>
+
 <br>
 <br>
-<div class = "container">
+<div class="ex1">
     <div class = "row">
-        <div class = "col-md-6 col-md-offset-3">
+        <form class = "col-md-6 col-md-offset-3">
+            <br>
             <h1> Delete user </h1>
-            <form th:action="@{/delete_user}" th:object="${user}" method="post">
+            <form th:action="@{/deleteuser}" th:object="${user}" method="post">
                 <!-- logout message -->
                 <div th:if="${param.logout}">
                     <div class="alert alert-info">You have been logged out.</div>
                 </div>
 
                 <div class = "form-group">
+                    <br>
                 <label for ="username">Insert username </label>
                 <input type="text" class = "form-control" id ="username" name = "username" th:field="*{username}"
                        placeholder="Insert username" autofocus="autofocus" required th:errorClass="is-invalid">
@@ -74,6 +98,7 @@
                     </div>
                 <div alight="left">
                     <tr>
+                        <br>
                         <label class="form-label" >Message</label>
                         <td>
                             <input type="text" th:field="*{message}" class="form-control" placeholder="Message" />
@@ -90,6 +115,8 @@
                         <a href="#" th:href="@{/logout}" class="button2 b-green rot-135">Log out</a>
                     </div>
                 </div>
+        </form>
+        </form>
         </div>
     </div>
 </div>
