--- a/src/main/resources/templates/get_info.html
+++ b/src/main/resources/templates/get_info.html
@@ -1,10 +1,12 @@
-<html html="" lang="cs" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
-  <meta charset="ISO-8859-1">
-  <title>User page</title>
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"-->
-  <!--          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
+<html xmlns:th="http://thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml" xmlns:style="http://www.w3.org/1999/xhtml"
+      xmlns:text-align="http://www.w3.org/1999/xhtml">
+<head>
+  <!--	<link rel="stylesheet" href="css/style.css" />-->
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous"/>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
   <style>
     .b-green, .b-green:before {
       color: white;
@@ -20,62 +22,27 @@
       background: linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#1abc9c', GradientType=1 );
     }
-    @media only screen and (max-width: 600px) {
-      /* Force table to not be like tables anymore */
-      #no-more-tables table,
-      #no-more-tables thead,
-      #no-more-tables tbody,
-      #no-more-tables th,
-      #no-more-tables td,
-      #no-more-tables tr {
-        /*display: center;*/
-      }
 
-      /* Hide table headers (but not display: none;, for accessibility) */
-      #no-more-tables thead tr {
-        position: absolute;
-        top: -999px;
-        left: -999px;
-      }
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    div.ex1 {
+      width: 950px;
+      height: 300px;
+      margin: auto;
+      border: white;
+    }
+    div.ex2 {
+      width: 900px;
+      height: 1000px;
+      margin: auto;
+      border: white;
+    }
+    h1 {
+      text-align: center;
 
-      #no-more-tables tr {
-        border: 1px solid #ccc;
-      }
-
-      #no-more-tables td {
-        /* Behave  like a "row" */
-        border: none;
-        border-bottom: 1px solid #eee;
-        position: relative;
-        padding-left: 60%;
-        font-size: 20px;
-        white-space: normal;
-        text-align: center;
-      }
-
-      #no-more-tables td:before {
-        /* Now like a table header */
-        /*position: absolute;*/
-        /* Top/left values mimic padding */
-        top: 6px;
-        left: 3px;
-        width: 15%;
-        padding-right: 15px;
-        white-space: nowrap;
-        text-align: center;
-        font-size: 14px;
-        font-weight: bold;
-      }
-      #no-more-tables th{
-        text-align: center;
-      }
-
-      /*
-        Label the data
-        */
-      #no-more-tables td:before {
-        content: attr(data-title);
-      }
     }
   </style>
 </head>
@@ -85,22 +52,35 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+      <button type="button" class="navbar-toggle collapsed"
+              data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+              aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span> <span
+              class="icon-bar"></span> <span class="icon-bar"></span> <span
+              class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Home Page
-      </a>
+      <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
+      <a class="navbar-brand" href="#" th:href="@{/products}">Shop</a>
+      <a class="navbar-brand" href="#" th:href="@{/login}">Login</a>
+      <a class="navbar-brand" href="#" th:href="@{/shoppingcart}">Shopping cart</a>
+      <a class="navbar-brand" href="#" th:href="@{/transfermoney}">Transfer money</a>
+      <a class="navbar-brand" href="#" th:href="@{/getinfo}">Get info</a>
+      <a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
+      <a class="navbar-brand" href="#" th:href="@{/deleteuser}">Delete user</a>
+      <a class="navbar-brand" href="#" th:href="@{/logout}">Log out</a>
     </div>
   </div>
 </nav>
+</div>
+</div>
 
 <br>
 <br>
 <form th:action="@{/getinfo}" th:object="${user}" method="post">
-  <div class="container">
+  <div class="ex1">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-
+        <br>
         <h1> Get your info from database </h1>
         <!-- logout message -->
         <div class="form-group">
@@ -108,7 +88,7 @@
           <input type="text" class="form-control" id="username" name="username" width="200" placeholder="Enter your username" autofocus="autofocus" required="" value="">
 
         </div>
-
+        <br>
         <div class="form-group">
           <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
@@ -129,7 +109,7 @@
   <br>
   <br>
 
-  <div class="container">
+  <div class="ex2">
     <div class="row">
       <div id="no-more-tables">
         <table class="col-md-12 table-bordered table-striped table-condensed cf">
