--- a/src/main/resources/templates/transfer_money.html
+++ b/src/main/resources/templates/transfer_money.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html html lang="cs" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org"
-      xmlns:sec="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml" xmlns:style="http://www.w3.org/1999/xhtml"
+      xmlns:text-align="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Add Product</title>
-
+    <!--	<link rel="stylesheet" href="css/style.css" />-->
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
           crossorigin="anonymous"/>
-    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"-->
-    <!--          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
     <style>
         .b-green, .b-green:before {
             color: white;
@@ -25,6 +21,22 @@
             background: -ms-linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
             background: linear-gradient(45deg, rgba(73,155,234,1) 0%, rgba(26,188,156,1) 100%);
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#1abc9c', GradientType=1 );
+        }
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        div.ex1 {
+            width: 900px;
+            height: 900px;
+            margin: auto;
+            border: white;
+        }
+        h1 {
+            text-align: center;
+
         }
     </style>
 </head>
@@ -41,19 +53,26 @@
                     class="icon-bar"></span> <span class="icon-bar"></span> <span
                     class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">Home Page
-            </a>
+            <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
             <a class="navbar-brand" href="#" th:href="@{/products}">Shop</a>
+            <a class="navbar-brand" href="#" th:href="@{/login}">Login</a>
+            <a class="navbar-brand" href="#" th:href="@{/shoppingcart}">Shopping cart</a>
+            <a class="navbar-brand" href="#" th:href="@{/transfermoney}">Transfer money</a>
+            <a class="navbar-brand" href="#" th:href="@{/getinfo}">Get info</a>
+            <a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
+            <a class="navbar-brand" href="#" th:href="@{/deleteuser}">Delete user</a>
+            <a class="navbar-brand" href="#" th:href="@{/logout}">Log out</a>
         </div>
     </div>
 </nav>
-
+</div>
+</div>
 <br>
 <br>
-<div class = "container">
+<div class = "ex1">
     <div class = "row">
         <div class = "col-md-6 col-md-offset-3">
-
+            <br>
             <h1>Transfer money</h1>
             <!--/*@thymesVar id="employee" type=""*/-->
             <form th:action="@{/transfermoney}" method="post" enctype="multipart/form-data">
