--- a/src/main/resources/templates/watch_detail.html
+++ b/src/main/resources/templates/watch_detail.html
@@ -71,9 +71,17 @@
             /*text-align: left;*/
             background-color: #FFFFFF;
         }
+        table th {
+            font-size: 1em;
+            font-family: "Calibri", sans-serif;
+            letter-spacing: .1em;
+            text-transform: uppercase;
+            font-weight: bold;
+        }
         h5 {
-            font-family: WildWest;
-            font-size: 20px;
+            font-family: "Calibri", sans-serif;
+            text-transform: uppercase;
+            font-size: 18px;
             color: black;
             padding: -7em;
             /*text-align: left;*/
@@ -297,9 +305,13 @@
                     class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
+            <a class="navbar-brand" href="#" th:href="@{/products}">Shop</a>
             <a class="navbar-brand" href="#" th:href="@{/login}">Login</a>
-            <a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
+            <a class="navbar-brand" href="#" th:href="@{/shoppingcart}">Shopping cart</a>
+            <a class="navbar-brand" href="#" th:href="@{/transfermoney}">Transfer money</a>
             <a class="navbar-brand" href="#" th:href="@{/getinfo}">Get info</a>
+            <a class="navbar-brand" href="#" th:href="@{/users}">Users</a>
+            <a class="navbar-brand" href="#" th:href="@{/deleteuser}">Delete user</a>
             <a class="navbar-brand" href="#" th:href="@{/logout}">Log out</a>
         </div>
     </div>
